# polyscope-py

./: .gitmodules  CMakeLists.txt  DOCS.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test_build.yml  test_macos.yml
src/cpp/: core.cpp  point_cloud.cpp  surface_mesh.cpp  utils.h
src/polyscope/: __init__.py  common.py  core.py  curve_network.py  device_interop.py  managed_buffer.py  point_cloud.py  surface_mesh.py  volume_grid.py
src/polyscope_bindings/: __init__.py
src/tetrapolyscope/: __init__.py  core.py  structure.py  volume_mesh.py
test/: fast_update_demo.py  imgui_demo.py  polyscope_demo.py  polyscope_test.py  ps_test.py  six_channel_test.ipynb
