[project]
name = "tetrapolyscope"
version = "2.5.0"
description = "Polyscope: A viewer and user interface for 3D data."
readme = "README.md"
license.file = "LICENSE"
authors = [
  { name = "Nicholas Sharp", email = "nmwsharp@gmail.com" },
]
maintainers = [
  {  name = "Nicholas Sharp", email = "nmwsharp@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"

dependencies = [
  "numpy",
]

[project.urls]
Homepage = "https://github.com/nmwsharp/polyscope"
Documentation = "https://polyscope.run"
"Bug Tracker" = "https://github.com/nmwsharp/polyscope/issues"
Discussions = "https://github.com/nmwsharp/polyscope/discussions"

[build-system]
requires = ["scikit-build-core", "setuptools"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"

[tool.setuptools]
packages = ["tetrapolyscope", "tetrapolyscope.imgui", "tetrapolyscope.implot"]

[tool.setuptools.package-dir]
tetrapolyscope = "src/polyscope"
"tetrapolyscope.imgui" = "src/polyscope/imgui"
"tetrapolyscope.implot" = "src/polyscope/implot"